# myChat

./: .gitignore  README.md  pyproject.toml  readme-zh.md
app/: main.py
app/core/: config.py  exceptions.py  extra_params.py  middleware.py  security.py
app/db/: __init__.py  crud.py  model_dependencies.py  models.py
app/schemas/: __init__.py  auth_schemas.py  base_schemas.py  card_schemas.py  group_schemas.py  record_schemas.py
app/utils/: __init__.py  find_project_root.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/api/: auth.ts  cards.ts  friends.ts  groups.ts  index.ts  store.ts  tests.ts  types.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/components/: ImageCropper.tsx  Sidebar.tsx  TopBar.tsx  UserAvatar.tsx  game-styles.css
frontend/html/: login.html  signup.html
frontend/js/: login.js  signup.js  tailwind_config.js
frontend/services/: cardsService.ts  friendsService.ts  index.ts  storeService.ts  userService.ts
frontend/stores/: cardsStore.ts  userStore.ts
frontend/tests/: setup.ts
frontend/utils/: index.ts  request.ts
log/log_config/: service_logger.py  setup_logging.py
static/: lucai_card_design.json  sichuan_card_design.json  yuecai_card_design.json
tcg-react/: README.md  openapi_formatted.json  package-lock.json  package.json  vitest.config.ts
tcg-react/api/: auth.ts  cards.ts  friends.ts  index.ts
tcg-react/services/: index.ts  userService.ts
tcg-react/stores/: friendsStore.ts  index.ts  storeStore.ts  types.ts  (+1 more)
tests/: cards.xlsx  insert_cards.py
(+51 files in other folders)
