[project]
name = "narcissustcg"  
version = "0.1.0"      
dependencies = [
    "aiomysql==0.2.0",
    "uvicorn==0.35.0",
    "fastapi==0.116.1",
    "requests==2.32.4",
    "tortoise-orm==0.25.1",
    "aerich==0.9.1",
    "passlib",
    "argon2_cffi",
    "cryptography==46.0.3",
    "aiofiles==25.1.0",
    "python-multipart==0.0.20"
]
[tool.setuptools]
packages = ["app", "log", "tests"]
[tool.aerich]
tortoise_orm = "app.core.config.TORTOISE_ORM_CONFIG"
location = "./migrations"
src_folder = "./."